--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,11 @@
   <hr>
   <div class="row">
     <div class="col-xs-12">
+      <button class="btn btn-primary" (click)="onChangeFirst()">Change first Element</button>
+      <button class="btn btn-danger" (click)="onDestroyFirst()">Destory first Element</button>
       <app-server-element *ngFor="let serverElement of serverElements"
-      [srvElement]="serverElement">
+      [srvElement]="serverElement"
+      [name]="serverElement.name">
       <p>
         <strong *ngIf="serverElement.type === 'server'" style="color: red">{{ serverElement.content }}</strong>
         <em *ngIf="serverElement.type === 'blueprint'">{{ serverElement.content }}</em>
